<resources>

    <string name="app_name">Claudio</string>
    <string name="menu_settings">Settings</string>
    <string name="add_button_text">Add new testbook</string>
    <string name="prefs_button_text">Preferences</string>
    
    <string name="title_activity_player">PlayerActivity</string>
    <string name="prevTrack">&lt;|</string>
    <string name="seekLeft">&lt;&lt;</string>
    <string name="playPause">|&gt;/||</string>
    <string name="seekRight">&gt;&gt;</string>
    <string name="nextTrack">|&gt;</string>
    
    <string name="playPauseText">Play</string>
    
    <string name="title_activity_audiobook">Claudio</string>
    
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="coverText">&lt;Cover art&gt;</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    
    <string name="dialog_title_edittext_preference">dialog_title</string>
    
	<string name="cover_image_text_replacement">&lt; Cover art &gt;</string>
	<string name="jump_image_text_replacement">&lt; Jump to time &gt;</string>
	
	<string name="back">Back</string>
	<string name="create_book">Create book</string>
	
	<string name="menu_save_title">Save/Bookmark</string>
	<string name="menu_delete_title">Delete</string>
	<string name="menu_preferences_title">Preferences</string>
	<string name="menu_add_tag">Add tag</string>
	<string name="menu_remove_tag">Remove tag</string>
	
	<string name="test_time_text">28:34:65</string>
	<string name="test_book_title_text">The Lord of the Rings, Book 0.5</string>
	<string name="test_track_title_text">lord_of_the_rings_track_15_out_of_29.mp3</string>
	
	<string name="test_track_counter">777/999</string>

</resources>