<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232421" >

    <!-- Book seek bar: Seek bar for browsing through the book -->

    <LinearLayout
        android:id="@+id/seek_bar_1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#232421" >

        <SeekBar
            android:id="@+id/bookBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxHeight="26dp"
            android:minHeight="26dp"
            android:progressDrawable="@drawable/book_bar_progress_background"
            android:thumb="@drawable/sb_book_thumb" />
    </LinearLayout>

    <!-- Cover Art Layer -->

    <LinearLayout
        android:id="@+id/cover_art_layout"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_below="@id/seek_bar_1"
        android:background="#131212" >

        <ImageView
            android:id="@+id/cover_art"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cover_image_text_replacement"
            android:gravity="center"
            android:src="@drawable/img_the_sun" />
    </LinearLayout>

    <!-- Playback details: author, title, duration and elapsed time are displayed for both book and track. -->

    <RelativeLayout
        android:id="@+id/playback_details"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/cover_art_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp" >

        <!-- Sublayer for displaying elapsed time of current track -->

        <LinearLayout
            android:id="@+id/elapsed_time_text"
            android:layout_width="47dp"
            android:layout_height="15dp"
            android:layout_alignRight="@+id/time_jump"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="55dp" 
            android:background="#131212" >

            <TextView
                android:id="@+id/trackElapsedTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:text="5:12:41"
                android:textColor="#FFFFFF"
                android:textSize="14dp"
                android:typeface="normal" />
        </LinearLayout>

        <!-- Sublayer for TimeJump: allows the user to go to a specific time point in a book -->

        <LinearLayout
            android:id="@+id/time_jump"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/trackElapsedTime"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp" 
            android:background="#232421" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center_horizontal"
                android:contentDescription="@string/jump_image_text_replacement"
                android:src="@drawable/img_clock" />
        </LinearLayout>
        
        <!-- Sublayer for displaying the book title -->

        <LinearLayout
            android:id="@+id/book_title_layout"
            android:layout_width="200dp"
            android:layout_height="15dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/time_jump"
            android:background="#131212" >

            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="BOOKTITLE!!!!!!!!!!"
                android:textColor="#FFFFFF"
                android:textSize="11dp"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/track_row_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_title_layout"
            android:layout_toRightOf="@+id/time_jump"
            android:background="#131212"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/track_counter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:text="(523/563629)"
                android:textColor="#777777"
                android:textSize="14dp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/trackTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="TRACKTITLE!!!!!!!!"
                android:textColor="#FFFFFF"
                android:textSize="14dp"
                android:typeface="normal" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Player Playback Controls UI Layer -->

    <RelativeLayout
        android:id="@+id/player_controls"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#131212" >

        <LinearLayout
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/player_controls"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/playPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playPause" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seek_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/player_controls"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/play_pause" >

            <ImageButton
                android:id="@+id/seekLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/seek_left_button_states"
                android:contentDescription="@string/seekLeft" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seek_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/player_controls"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/play_pause" >

            <ImageButton
                android:id="@+id/seekRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/seek_right_button_states"
                android:contentDescription="@string/seekRight"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/prev_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/player_controls"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/seek_left" >

            <ImageButton
                android:id="@+id/prevTrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/previous_track_button_states"
                android:contentDescription="@string/prevTrack" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/next_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/player_controls"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/seek_right" >

            <ImageButton
                android:id="@+id/nextTrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/next_track_button_states"
                android:contentDescription="@string/nextTrack" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Track seek bar: shows the progress of the current track and allows the user to seek through it. -->

    <LinearLayout
        android:id="@+id/track_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_above="@+id/player_controls"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#232421" >

        <SeekBar
            android:id="@+id/track_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxHeight="20dp"
            android:minHeight="20dp"
            android:progress="80"
            android:progressDrawable="@drawable/track_bar_progress_background"
            android:thumb="@drawable/sb_track_thumb" />
    </LinearLayout>

</RelativeLayout>